# smart-wallet-system

./: CMakeLists.txt  README.md  data.sql
include/: TCPSocket.h  client.h  client_TCPSocket.h  client_handler.h  client_info.h  communication.h  defs.h  message.h  server.h  server_TCPSocket.h
smart-wallet-client/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  smart-wallet-client.pro
smart-wallet-client/include/: client.h
smart-wallet-client/src/: client.cpp
smart-wallet-server/: CMakeLists.txt
smart-wallet-server/include/: client_handler.h  client_info.h  server.h  server_defs.h  thread-safe_queue.h
smart-wallet-server/src/: CMakeLists.txt  client_handler.cpp  server.cpp
smart-wallet-server/test/: CMakeLists.txt  server.cpp
src/: CMakeLists.txt  TCPSocket.cpp  client.cpp  client_TCPSocket.cpp  client_handler.cpp  server.cpp  server_TCPSocket.cpp
test/: CMakeLists.txt  client.cpp  server.cpp
