add_executable(server server.cpp)
add_executable(client client.cpp)
target_link_libraries(server smartwallet_lib)
target_link_libraries(client smartwallet_lib)

find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(server PUBLIC "-pthread")
  target_compile_options(client PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(server "${CMAKE_THREAD_LIBS_INIT}")
  target_link_libraries(client "${CMAKE_THREAD_LIBS_INIT}")
endif()
